--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -2526,6 +2526,7 @@ and rent your first proxy.</string>
                     <connections>
                         <outlet property="customTabBar" destination="dJE-Ia-LAd" id="soL-BX-WYg"/>
                         <outlet property="loadingView" destination="LxI-ic-oJm" id="Mel-NI-eY0"/>
+                        <outlet property="noDataLabel" destination="Ycm-44-xQ2" id="zuM-Vh-n4n"/>
                         <outlet property="noDataView" destination="hlu-rV-KRZ" id="KG4-1g-ltk"/>
                         <outlet property="separatorView" destination="cXb-Cx-jfH" id="XvD-Dh-A1y"/>
                         <outlet property="tableView" destination="rOv-Iz-oI1" id="jnT-bb-44C"/>
