Create segue to refund details

--- a/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/Dashboard.storyboard
@@ -868,6 +868,7 @@
                         <outlet property="trafficLabel" destination="rUf-gj-aQq" id="eoF-yK-64W"/>
                         <outlet property="trafficRemainedLabel" destination="kgu-ib-MUt" id="p0W-zL-fr5"/>
                         <segue destination="r6Q-gX-oH9" kind="presentation" identifier="ShowrefundSegueID" id="6gF-sr-8l6"/>
+                        <segue destination="Xye-fH-hKs" kind="presentation" identifier="ViewRefundDetailsSegue" id="sA2-zB-nlq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rhb-UN-upv" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -880,7 +881,15 @@
                 <viewControllerPlaceholder storyboardName="Funds" referencedIdentifier="RefundRequestID" id="r6Q-gX-oH9" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EWV-sa-PRX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8267" y="500"/>
+            <point key="canvasLocation" x="8285" y="421"/>
+        </scene>
+        <!--RefundDetailsControllerID-->
+        <scene sceneID="YbH-Tf-C58">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Funds" referencedIdentifier="RefundDetailsControllerID" id="Xye-fH-hKs" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qof-Qm-8Te" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="8327" y="547"/>
         </scene>
         <!--Dashboard-->
         <scene sceneID="315-MS-gfr">
