--- a/IPSX/Flows/Funds/Storyboard/Funds.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Funds.storyboard
@@ -476,7 +476,7 @@
         <!--Refund Details Controller-->
         <scene sceneID="cAo-O1-mMh">
             <objects>
-                <viewController id="K8X-qx-AhS" customClass="RefundDetailsController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RefundDetailsControllerID" id="K8X-qx-AhS" customClass="RefundDetailsController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UqF-jy-Jgd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
